--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-flask = "^3.0.3"
-flask-sqlalchemy = "^3.1.1"
-werkzeug = "^3.0.4"
+Flask==2.0.3
+Flask-SQLAlchemy==2.5.1
+Werkzeug==2.0.3
+PyJWT==2.3.0
