--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,8 @@ python = "^3.12"
 flask = "^3.0.3"
 flask-sqlalchemy = "^3.1.1"
 werkzeug = "^3.0.4"
-pandas = "2.0.0"
+pandas = "^2.2.3"
+pytest = "^8.3.3"
 
 
 [build-system]
