--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,3 @@
-# .github/workflows/test-register-login.yml
 name: Test Flask Register and Login
 
 on:
@@ -26,3 +25,8 @@ jobs:
         source venv/bin/activate
         pip install --upgrade pip
         pip install -r requirements.txt
+
+    - name: Run tests
+      run: |
+        source venv/bin/activate
+        pytest --maxfail=1 --disable-warnings  # Executa os testes com pytest
